src/custom/snapshots/hugr_llvm__custom__conversions__test__trunc_s@pre-mem2reg@llvm14.snap
---
source: src/custom/conversions.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [58 x i8] c"Float value too big to convert to int of given width (32)\00", align 1

define { i32, { { i32, i8* } }, { i32 } } @_hl.main.1(double %0) {
alloca_block:
  %"0" = alloca { i32, { { i32, i8* } }, { i32 } }, align 8
  %"2_0" = alloca double, align 8
  %"4_0" = alloca { i32, { { i32, i8* } }, { i32 } }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store double %0, double* %"2_0", align 8
  %"2_01" = load double, double* %"2_0", align 8
  %flt_pos = call double @llvm.fabs.f64(double %"2_01")
  %conversion_valid = fcmp ole double %flt_pos, 0x41DFFFFFFFC00000
  %conversion_valid_i32 = zext i1 %conversion_valid to i32
  %trunc_result = fptosi double %"2_01" to i32
  %1 = insertvalue { i32 } undef, i32 %trunc_result, 0
  %2 = insertvalue { i32, { { i32, i8* } }, { i32 } } { i32 1, { { i32, i8* } } poison, { i32 } poison }, { i32 } %1, 2
  %3 = select i1 %conversion_valid, { i32, { { i32, i8* } }, { i32 } } %2, { i32, { { i32, i8* } }, { i32 } } { i32 0, { { i32, i8* } } { { i32, i8* } { i32 2, i8* getelementptr inbounds ([58 x i8], [58 x i8]* @0, i32 0, i32 0) } }, { i32 } poison }
  store { i32, { { i32, i8* } }, { i32 } } %3, { i32, { { i32, i8* } }, { i32 } }* %"4_0", align 8
  %"4_02" = load { i32, { { i32, i8* } }, { i32 } }, { i32, { { i32, i8* } }, { i32 } }* %"4_0", align 8
  store { i32, { { i32, i8* } }, { i32 } } %"4_02", { i32, { { i32, i8* } }, { i32 } }* %"0", align 8
  %"03" = load { i32, { { i32, i8* } }, { i32 } }, { i32, { { i32, i8* } }, { i32 } }* %"0", align 8
  ret { i32, { { i32, i8* } }, { i32 } } %"03"
}

; Function Attrs: nofree nosync nounwind readnone speculatable willreturn
declare double @llvm.fabs.f64(double) #0

attributes #0 = { nofree nosync nounwind readnone speculatable willreturn }
