src/custom/snapshots/hugr_llvm__custom__conversions__test__trunc_u@llvm14.snap
---
source: src/custom/conversions.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [58 x i8] c"Float value too big to convert to int of given width (64)\00", align 1

define { i32, { { i32, i8* } }, { i64 } } @_hl.main.1(double %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %flt_pos = call double @llvm.fabs.f64(double %0)
  %conversion_valid = fcmp ole double %flt_pos, 0x43F0000000000000
  %conversion_valid_i32 = zext i1 %conversion_valid to i32
  %trunc_result = fptoui double %0 to i64
  %1 = insertvalue { i64 } undef, i64 %trunc_result, 0
  %2 = insertvalue { i32, { { i32, i8* } }, { i64 } } { i32 1, { { i32, i8* } } poison, { i64 } poison }, { i64 } %1, 2
  %3 = select i1 %conversion_valid, { i32, { { i32, i8* } }, { i64 } } %2, { i32, { { i32, i8* } }, { i64 } } { i32 0, { { i32, i8* } } { { i32, i8* } { i32 2, i8* getelementptr inbounds ([58 x i8], [58 x i8]* @0, i32 0, i32 0) } }, { i64 } poison }
  ret { i32, { { i32, i8* } }, { i64 } } %3
}

; Function Attrs: nofree nosync nounwind readnone speculatable willreturn
declare double @llvm.fabs.f64(double) #0

attributes #0 = { nofree nosync nounwind readnone speculatable willreturn }
